--- a/src/assets/css/flow.css
+++ b/src/assets/css/flow.css
@@ -6,6 +6,23 @@
     width: 7px;
 }
 
+/* 左右方向的 handle */
+.vue-flow__handle-left,
+.vue-flow__handle-right {
+    height: 20px;
+    width: 7px;
+    border-radius: 7px;
+}
+
+/* 上下方向的 handle */
+.vue-flow__handle-top,
+.vue-flow__handle-bottom {
+    height: 7px;
+    width: 20px;
+    border-radius: 7px;
+}
+
+
 .vue-flow__edge-path {
     stroke: var(--color-main);
     stroke-width: 3px;
